welcome.lessons.welcome.array.has271.Has271.scala.error
has271:5: error: overloaded method value abs with alternatives:
  (x$1: Double)Double <and>
  (x$1: Float)Float <and>
  (x$1: Long)Long <and>
  (x$1: Int)Int
 cannot be applied to (Boolean)
				if (Math.abs(nums (i+2)-(nb-1)==2)) {
                                         ^